samples/_failures_safe/1761625021_ef44f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eacb0c1b.c: In function ‘main’:
./samples/SAFE/__tmp_eacb0c1b.c:182:9: error: expected declaration or statement at end of input
  182 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_eacb0c1b.c:182:9: error: expected declaration or statement at end of input
